Fixed bug - Component was setting style before receiving props. Added drop shadow, border, rounded edges to beautify. Photos now shift as intended.

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
 .carouselContainer {
   user-select: none;
   position: relative;
-  width: 900px;
-  margin: 50px auto;
+  width: 1000px;
+  margin: 70px auto;
 }
 
 .leftArrow {
