--- a/src/Img.css
+++ b/src/Img.css
@@ -3,4 +3,12 @@
   height: 400px;
   position: absolute;
   transition: .5s all;
+  border-radius: 4px;
+  border: 1px solid black;
+  box-shadow: 0px 10px 20px black;
+}
+
+.text {
+  position: absolute;
+  z-index: 20;
 }
